# ReMoM

./: .clang-format  .clang-format-ignore  .clangd  .git-blame-ignore-revs  .gitattributes  .gitignore  .valgrindrc  AGENTS.md  AI_NPC_EVENTS.CSV  AI_TURN_SUMMARY.CSV  BUILD.md  BUILDING.md  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CMakePresets.json  COMBAT.TMP  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CmakePresets.json  DartConfiguration.tcl  INSTALL.vcxproj  MAGIC_SET  MK_GTest_Compile.bat  MK_GTest_Link.bat  MK_MoM.BAT  MK_PoC.BAT  MK_TST.BAT  MK_WIN32.BAT  Makefile  Makefile.am  MovePathFind.lib  PACKAGE.vcxproj  PLAYING.md  PushAll.sh  README.md  RELEASES.md  ReUp-DOSBoxDevel-MoM_Rasm.py  SAVETEST.GAM  (+30 more)
MoM/src/: AIBUILD.c  AIBUILD.h  AIDATA.c  AIDATA.h  AIDUDES.c  AIDUDES.h  AIMOVE.c  AIMOVE.h  AISPELL.c  AISPELL.h  ALLOC.c  ALLOC.h  AdvsrScr.c  AdvsrScr.h  ArmyList.c  ArmyList.h  CITYCALC.c  CITYCALC.h  CITYSCAP.c  CITYSCAP.h  CMBTAI.c  CMBTAI.h  CMBTDEF.h  CMBTMVPT.c  CMBTMVPT.h  CMBTTST.c  CMBTTST.h  CMBTTSTU.c  CMBTTSTU.h  CMakeLists.txt  CONQUEST.c  CONQUEST.h  CREDITS.c  CityList.c  CityList.h  CityScr.c  CityScr.h  City_ovr55.c  City_ovr55.h  Combat.c  (+127 more)
MoM/tests/: CMakeLists.txt  MOM_Test_Helpers.cpp  MOM_Test_Helpers.hpp  MOM_integration_test.cpp  MOM_tests.cpp  test_AI_Evaluate_Continents.cpp  test_AI_Stacks_Survey_Expedition_Forces.cpp  test_Animate_Oceans.cpp  test_BigBook_PageTurn.cpp  test_Build_Connectivity_Graph.cpp  test_Build_Connectivity_Graphs.cpp  test_Build_Dock_Linked_List.cpp  test_Build_Land_Linked_List.cpp  test_City_Maximum_Size_NewGame.cpp  test_Clear_Gibs.cpp  test_Clear_Square_Scouted.cpp  test_Create_Lair.cpp  test_Desert_Autotile.cpp  test_Find_Shortest_Path.cpp  test_Generate_Home_City.cpp  test_Generate_Lairs.cpp  test_Init_New_Game.cpp  test_Map_Square_Is_Embarkable.cpp  test_NEWG_ClearLandmasses__WIP.cpp  test_NEWG_SetBaseLands__WIP.cpp  test_NEWG_TileIsleExtend__WIP.cpp  test_Ranged_Mouse_Image.cpp  test_Reload_Melee_Sound.cpp  test_River_Path.cpp  test_STR_ListSeparator.cpp  test_Set_Gibs.cpp  test_Set_Upper_Lair_Guardian_Count.cpp  test_SmlBook_PageTurn.cpp  test_Square_Food2_NewGame.cpp  test_TILE_SetLandMass__WIP.cpp  test_Update_Move_Map_City_Area_Restrictions.cpp
MoX/src/: AIL.c  Allocate.c  Allocate.h  Allocate_Pool.c  Allocate_Pool.h  CFG.c  CFG.h  CMakeLists.txt  DOS.c  DOS.h  Draw_seg025.c  Draw_seg025.h  Draw_seg029.c  Draw_seg029.h  EMM.c  EXIT.c  EXIT.h  FLIC_Draw.c  FLIC_Draw.h  Fields.c  Fields.h  Fonts.c  Fonts.h  GENDRAW.c  GENDRAW.h  GFILE.c  Graphics.c  Graphics.h  Help.c  Help.h  IO_Buffer.c  IO_Buffer.h  Input.c  Keyboard.c  Keyboard.h  LBX_Load.c  LBX_Load.h  LOADSAVE.c  LOADSAVE.h  MOM_DAT.c  (+61 more)
MoX/tests/: CMakeLists.txt  MOX_tests.cpp  test_Allocate.cpp  test_Allocate_Pool.cpp  test_EMS.cpp  test_Fonts.cpp  test_Graphics.cpp  test_Util.cpp  test_capture.cpp
STU/src/: AI_METRICS.c  AI_METRICS.h  CMakeLists.txt  STU.h  STU_BRAK.c  STU_BRAK.h  STU_CHK.c  STU_CHK.h  STU_DBG.c  STU_DBG.h  STU_DEF.h  STU_FIO.c  STU_FIO.h  STU_FMT.c  STU_FON.c  STU_FON.h  STU_GRAF.c  STU_GRAF.h  STU_HASH.c  STU_HASH.h  STU_INIT.c  STU_INIT.h  STU_JSON.c  STU_LOG.c  STU_LOG.h  STU_MSG.c  STU_MSG.h  STU_PRN.c  STU_PRN.h  STU_SND.c  STU_SND.h  STU_TERR.c  STU_TERR.h  STU_TST.c  STU_TST.h  STU_UTIL.c  STU_UTST.c  STU_UTST.h  STU_VLD.c  STU_VLD.h  (+6 more)
STU/tests/: CMakeLists.txt  test_STU.cpp  test_STU_GRAF.cpp  test_STU_HASH.cpp  test_STU_LOG.cpp  test_STU_LOG_strip.cpp
TootLib/: CMakeLists.txt  TootLib.c
demo/: CMakeLists.txt  demo_crash.c  demo_effects.h  demo_harness.c  demo_harness.h  demo_main.c  effect_collage.c  effect_dissolve.c  effect_earthquake.c  effect_lose.c  effect_mastery.c  effect_score.c  effect_screen.c  effect_somlose.c  effect_somwin.c  effect_summon.c  effect_vanish.c  effect_win.c
platform/: CMakeLists.txt  cmack.bat  main.cpp
platform/capture/: PFL_Capture.c
platform/headless/: headless_Audio.c  headless_EMM.c  headless_KD.c  headless_PFL.c  headless_State.c  headless_Timer.c
platform/include/: Platform.h  Platform_Capture.h  Platform_Keys.h  Platform_Replay.h
platform/replay/: Replay.c
platform/sdl2/: MOM_PFL.h  PFL_Audio_Internal.h  sdl2_Audio.c  sdl2_Audio.h  sdl2_EMM.c  sdl2_Init.c  sdl2_Input.c  sdl2_KD.c  sdl2_KD.h  sdl2_MD.c  sdl2_MOM.h  sdl2_PFL.c  sdl2_PFL.h  sdl2_SCCC.h  sdl2_Timer.c  sdl2_Video.c
platform/sdl3/: MOM_PFL.h  PFL_Audio_Internal.h  sdl3_KD.c  (+15 more)
src/: AIBUILD.C  AIBUILD.H  AIBUILD._h_  AIBUILD.c  AIBUILD.h  AIDATA.C  AIDATA.H  AIDATA._c_  AIDATA._h_  AIDATA.c  AIDATA.h  AIDUDES.C  AIDUDES.H  AIDUDES._c_  AIDUDES._h_  AIDUDES.c  AIDUDES.h  AIMOVE.C  AIMOVE.H  AIMOVE._c_  AIMOVE.c  AIMOVE.h  AISPELL.C  AISPELL.H  AISPELL._c_  AISPELL._h_  AISPELL.c  AISPELL.h  ALLOC.C  ALLOC.H  ALLOC._c_  ALLOC._h_  ALLOC.c  ALLOC.h  AdvsrScr.C  AdvsrScr.H  AdvsrScr._c_  AdvsrScr.c  AdvsrScr.h  Allocate.C  (+563 more)
tests/: CMakeLists.txt  assert_ai_5turns.txt  assert_combat_s1.txt  assert_combat_s2.txt  assert_combat_strategic.txt  assert_continue_next_turn.txt  assert_continue_save.txt  assert_oob_autotiling.txt  assert_worldgen.txt  baseline_ai_5turns_TURN_SUMMARY.csv  check_ai_metrics.c  check_biota_draws.cmake  check_save_fields.c  compare_save.cmake  compare_save_text.c  compare_save_text.cmake  golden_worldgen_seed12345.GAM  golden_worldgen_seed12345.txt  hello_test.c  test_invariant_make_extension_lowercase.py  validate_save.cmake
tools/: CMakeLists.txt  Extract_FONTS_LBX.c  capture_remom_rng_baseline.sh  create_lair_params.py  do_github_release.py  fields_extract.py  fields_merge.py  find_stable_fields.py  format.sh  fresh_install.py  generate_stub_wip_todo.py  gtl2op2.c  lbx_extract.c  lbx_hashes.c  lib_run.py  make_extension_lowercase.py  make_extension_lowercase.sh  parity_check.py  record_next_turn.sh  refresh_asserts.py  regenerate_goldens.sh  rename_C_to_c.sh  rename_H_to_h.sh  render_demo.py  rmr2hms.c  run-hemom.py  run-remom.py  savedump.c  stage_hunks.py  stage_tile_to_square_renames.py  test_cpack_ignore.cmake  verify_rng_alignment.sh  vet_dependency.py
(+2258 files in other folders)
